# circadian-fiber-photometry

./: .gitignore  MATLAB_PUBLICATION_ANALYSIS_COMPARISON.md  MATLAB_SUMMARY.md  README.md  pyproject.toml
matlab_scripts/: Doric_circadian_v9_hattarlab.m  FP_IRLS_regularized_v9.m  count_event_2pc_v9.m  count_frequence.m  readdoric_QT_v4_digital.m
src/circadian_fiber_photometry/: __init__.py  _utils.py  analysis.py  results.py  streams.py  synthetic_doric.py
tests/: test_analysis.py  test_synthetic_doric.py
