[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "circadian-fiber-photometry"
version = "0.1.0"
description = "Analysis utilities for circadian fiber photometry experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Circadian Fiber Photometry contributors" },
]
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.urls]
Repository = "https://github.com/nimh-dsst/circadian-fiber-photometry"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/circadian_fiber_photometry"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
